   <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/loginshadow"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/etEmail"
                style="@style/AppTheme.EditText"
                android:hint="@string/email_Add"
                android:inputType="textEmailAddress"
                android:textSize="17dp"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp">

            <EditText
                android:id="@+id/etPwd"
                style="@style/AppTheme.EditText"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="17dp"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttonbglgn"
            android:text="@string/Login"
            android:textColor="@color/accentColorSecondry"
            android:textSize="@dimen/loginBtn"
            android:visibility="gone" />


        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/registercorner"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></com.facebook.shimmer.ShimmerFrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginRight="17dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/facebook"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/imagecorner"
                android:src="@drawable/fb_button" />

            <ImageButton
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="right|bottom"
                android:layout_weight="1"
                android:background="@drawable/imagecorner"
                android:src="@drawable/gplus_btn" />
        </LinearLayout>
    </LinearLayout>

   </ScrollView>